<resources>
    <string name="app_name">PopMovies</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="rating">Rating:</string>
    <string name="released_in">Released:</string>
    <string name="synopsis">Synopsis</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>

    <!-- Strings for Preferences-->
    <string name="pref_sort_label">Sort by:</string>

    <string name="pref_sort_key" translatable="false">sort</string>

    <string name="pref_sort_default">popular</string>

    <string name="pref_sort_by_label_popular" translatable="false">Popular</string>
    <string name="pref_sort_by_label_top_rated" translatable="false">Top Rated</string>
    <string name="pref_sort_by_label_favorite" translatable="false">Favorite</string>

    <string-array name="pref_sort_by_label_array">
        <item>@string/pref_sort_by_label_popular</item>
        <item>@string/pref_sort_by_label_top_rated</item>
    </string-array>

    <string name="pref_sort_by_value_popular">popular</string>
    <string name="pref_sort_by_value_top_rated">top_rated</string>
    <string name="pref_sort_by_value_favorite">favorite</string>

    <string-array name="pref_sort_by_value_array">
        <item>@string/pref_sort_by_value_popular</item>
        <item>@string/pref_sort_by_value_top_rated</item>
    </string-array>

    <string name="content_authority">com.android.daniel.popmovies</string>

    <string name="movie_status" translatable="false">movie-status</string>

    <!-- Empty Movie Database -->
    <string name="empty_movie_list">No Movie Information Available</string>
    <string name="empty_movie_list_no_network">No movie information available. The network is not available.</string>
    <string name="empty_movie_list_server_down">No movie information available. The server is not returning data.</string>
    <string name="empty_movie_list_server_error">No movie information available. The server is not returning valid data. Please check for an updated version of PopMovie.</string>
    <string name="empty_movie_list_invalid_sort_by">No weather information available. The Sort By in settings is not recognized by the movie server.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_more">Read more</string>
    <string name="read_less">Read less</string>
    <string name="read_reviews">Reviews</string>
    <string name="trailers">Trailers</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">popmovie.daniel.com</string>
    <string name="marked_as_favorite">The movie is marked as favorite</string>
    <string name="removed_from_favorite_list">The movie is no longer marked as favorite</string>
    <string name="popular_movie_list">Popular movies list</string>
    <string name="top_rated_movie_list">Top rated movies list</string>
    <string name="favorite_movie_list">Favorite movies list</string>


    <string name="no_information_available">No Information Available</string>

</resources>
